--- a/main.css
+++ b/main.css
@@ -1,5 +1,5 @@
 * { 
-    background: #012a81; 
+    background: #4b7183; 
   } 
   img { 
     width: 500px; 
@@ -23,9 +23,9 @@
   .films { 
     background: whitesmoke; 
   } 
-   
-   
-   
+  #buy-ticket-container {
+    text-align: right; /* Align content to the right */
+}
    
   button { 
   align-items: center; 
@@ -36,9 +36,10 @@
   box-sizing: border-box; 
   color: #FFFFFF; 
   display: flex; 
-  font-family: Phantomsans, sans-serif; 
+  font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif, sans-serif; 
   font-size: 20px; 
   justify-content: center; 
+
   line-height: 1em; 
   max-width: 100%; 
   min-width: 140px; 
