--- a/main.css
+++ b/main.css
@@ -23,9 +23,7 @@
   .films { 
     background: whitesmoke; 
   } 
-  #buy-ticket-container {
-    text-align: right; /* Align content to the right */
-}
+   
    
   button { 
   align-items: center; 
@@ -36,10 +34,9 @@
   box-sizing: border-box; 
   color: #FFFFFF; 
   display: flex; 
-  font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif, sans-serif; 
+  font-family: Arial, Helvetica, sans-serif; 
   font-size: 20px; 
   justify-content: center; 
-
   line-height: 1em; 
   max-width: 100%; 
   min-width: 140px; 
