--- a/index.css
+++ b/index.css
@@ -23,18 +23,22 @@
   .films { 
     background: whitesmoke; 
   } 
-   
+
+  ul#films li {
+    margin-bottom: 10px;
+  }
+
    
   button { 
   align-items: center; 
-  background-image: linear-gradient(144deg,#406dff, #5B42F3 50%,#00DDEB); 
+  background-color: orange; 
   border: 0; 
   border-radius: 8px; 
-  box-shadow: rgb(65, 77, 252) 0 15px 30px -5px; 
+  box-shadow: rgb(102, 98, 79) 0 15px 30px -5px; 
   box-sizing: border-box; 
   color: #FFFFFF; 
   display: flex; 
-  font-family: Arial, Helvetica, sans-serif; 
+  font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif; 
   font-size: 20px; 
   justify-content: center; 
   line-height: 1em; 
